test/language/spec/containment/invalid/external_on_type.topo
// TEST: external-on-type
// EXPECT-ERROR: 'external' can only modify function declarations

namespace app {

public:
  external type Config {
  public:
    int value;
  }

}
